# cpp8

./: .clang-format  .gitignore  1  CMakeLists.txt  file_finder.cpp  file_finder.h  main.cpp  main_recursion.cpp  run.sh  task.txt
.github/workflows/: c-cpp.yml
argc/: CMakeLists.txt  argc.cpp  argc.h
block/: CMakeLists.txt  block.cpp  block.h
files/: CMakeLists.txt  files.cpp  files.h
global/: hash.h
hash/: CMakeLists.txt  hash.cpp  hash.h
hashing/: 1  CMakeLists.txt  crc.h  crc32.cpp  hash.cpp  hash.h  hash_type.h
hashing22/: CMakeLists.txt  crc32.cpp  hash.cpp  hash.h  hash_type.cpp  hash_type.h
