cmake_minimum_required(VERSION 3.25.1)

project(Bayan VERSION 0.0.1)

add_executable(bayan main_recursion.cpp)

target_include_directories(
    bayan
    PRIVATE
    ${CMAKE_CURRENT_BINARY_DIR}
)

set_target_properties(bayan PROPERTIES
    CXX_STANDARD 20
    CXX_STANDARD_REQUIRED ON
)

set(CMAKE_BUILD_TYPE Debug)

# install(
#     TARGETS bulk
#     COMPONENT ${PROJECT_NAME}
#     RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR} # bin
# )
# SET(CPACK_GENERATOR "DEB")
# SET(CPACK_PACKAGE_VERSION_MAJOR ${PROJECT_VERSION_MAJOR}) 
# SET(CPACK_PACKAGE_VERSION_MINOR ${PROJECT_VERSION_MINOR}) 
# SET(CPACK_PACKAGE_VERSION_PATCH ${PROJECT_VERSION_PATCH}) 
# SET(CPACK_PACKAGE_NAME ${CMAKE_PROJECT_NAME})
# SET(CPACK_PACKAGE_CONTACT "my")
# INCLUDE(CPack)
